--- a/app/src/main/res/layout/shr_product_card.xml
+++ b/app/src/main/res/layout/shr_product_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@android:color/white"
@@ -29,15 +30,19 @@
                 android:id="@+id/product_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/shr_product_title"
-                android:textAppearance="?attr/textAppearanceHeadline6" />
+                tools:text="@string/shr_product_title"
+                android:textAlignment="center"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
+                android:gravity="center_horizontal" />
 
             <TextView
                 android:id="@+id/product_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/shr_product_description"
-                android:textAppearance="?attr/textAppearanceBody2" />
+                tools:text="@string/shr_product_description"
+                android:textAlignment="center"
+                android:textAppearance="?attr/textAppearanceBody2"
+                android:gravity="center_horizontal" />
         </LinearLayout>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
