--- a/app/src/main/res/layout/shr_product_card.xml
+++ b/app/src/main/res/layout/shr_product_card.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@android:color/white"
-    app:cardElevation="2dp"
+    app:cardBackgroundColor="@android:color/transparent"
+    app:cardElevation="0dp"
     app:cardPreventCornerOverlap="true">
 
     <LinearLayout
