--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,11 +22,10 @@
     </style>
 
     <style name="Widget.Shrine.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="hintTextAppearance">
-            @style/TextAppearance.Shrine.TextInputLayout.HintText
-        </item>
-        <item name="android:paddingBottom">8dp</item>
-        <item name="android:textColorHint">?attr/colorPrimaryDark</item>
+    <item name="hintTextAppearance">@style/TextAppearance.Shrine.TextInputLayout.HintText</item>
+    <item name="hintTextColor">@color/textColorPrimary</item>
+    <item name="android:paddingBottom">8dp</item>
+    <item name="boxStrokeColor">@color/textInputOutlineColor</item>
     </style>
 
     <style name="TextAppearance.Shrine.TextInputLayout.HintText" parent="TextAppearance.MaterialComponents.Subtitle2">
@@ -51,6 +50,10 @@
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
 
+    <style name="Widget.Shrine.Backdrop" parent="">
+        <item name="android:background">?attr/colorAccent</item>
+    </style>
+
     <style name="Theme.Shrine.Autumn" parent="Theme.Shrine">
         <item name="colorPrimary">#FFCF44</item>
         <item name="colorPrimaryDark">#FD9725</item>
@@ -69,4 +72,12 @@
 <!--<item name="hintTextColor">@color/textColorPrimary</item>-->
 <!--<item name="android:paddingBottom">8dp</item>-->
 <!--<item name="boxStrokeColor">@color/textInputOutlineColor</item>-->
+<!--</style>-->
+
+<!--<style name="Widget.Shrine.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->
+<!--<item name="hintTextAppearance">-->
+<!--    @style/TextAppearance.Shrine.TextInputLayout.HintText-->
+<!--</item>-->
+<!--<item name="android:paddingBottom">8dp</item>-->
+<!--<item name="android:textColorHint">?attr/colorPrimaryDark</item>-->
 <!--</style>-->
